# Relay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELAY-development-roadmap.md  RELAY-project-documentation.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
deploy/: README.md  docker-compose.local-db.yml  docker-compose.prod.yml  env.prod.example
deploy/aws/: README.md  events.tf  iam.tf  outputs.tf  ses.tf  terraform.tfvars.example  variables.tf
deploy/gcp/: apis.tf  network.tf  outputs.tf  registry.tf  secrets.tf  sql.tf  startup.sh.tpl  terraform.tfvars.example  variables.tf  versions.tf  vm.tf
docs/: control-flow.md  deployment.md  interview-prep.md  legal-data-preflight.md  onboarding.md  phase-history.md  phase1c-live-smoke.md  phase3-readiness.md  phase4-readiness.md  project-audit-2026-07-05.md  project-learning-guide.md  prototype-status.md  security-review-checklist.md
docs/decisions/: email-hash-pepper.md  local-tool-calling.md  prospecting-provider.md  sending-provider.md
infra/n8n/: relay-spine.json
scripts/: benchmark_throughput.py  demo_journey.py  dev_pg.sh  import_leads.py  run_evals.py  seed_synthetic.py
src/relay/: __init__.py  audit.py  bootstrap.py  config.py  economics.py  hashing.py  logs.py  ratelimit.py  senders.py  tenancy.py
src/relay/api/: admin_ui.py  app.py  deps.py  ops_ui.py  prospects_ui.py  review_ui.py  routes.py  schemas.py
src/relay/compute/: __init__.py  anthropic_api.py  base.py  google_api.py  hosted_anthropic.py  local_openai.py  offline.py  openai_compat.py  prompting.py  registry.py
src/relay/crm/: __init__.py  base.py  espo.py  memory.py  registry.py  sync.py
src/relay/db/: engine.py  migrate.py  models.py
src/relay/domain/: approval.py  dsr.py  eligibility.py  preflight.py  state_machine.py  states.py  suppression.py  vocab.py
src/relay/evals/: __init__.py  harness.py
tests/: conftest.py  test_adversarial.py  test_api.py  test_compute.py  test_dry_run.py  test_evals.py  test_exit_gate_journey.py  test_guardrails.py  test_hash_pepper.py  test_idempotency.py  test_logging_and_audit.py  test_observability.py  test_phase1a_api.py  test_phase1a_pipeline.py  test_phase1a_schema.py  test_phase1b_gate.py  test_phase1c_send.py  test_phase3_scale.py  test_phase4_scale.py  test_prototype_utils.py  test_ratelimit.py  test_resumability.py  test_review_fixes.py  test_routing.py  test_sender_identity.py  test_sequences.py  test_ses_ingest.py  test_shortlist.py  test_source_register.py  test_state_machine_db.py  test_states.py  test_suppression.py  test_synthetic.py  test_tenant_isolation.py  test_unattended.py  test_unsubscribe.py
(+27 files in other folders)
