[project]
name = "relay"
version = "0.1.0"
description = "RELAY — autonomous B2B sales prospecting and outreach system. Outbound that compounds."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "email-validator>=2.0",
    "anthropic>=0.69",
    "httpx>=0.27.0",
    "faker>=40.28.1",
]

[project.scripts]
relay-migrate = "relay.db.migrate:main"
relay-worker = "relay.workers.send_worker:main"
relay-retention = "relay.workers.retention_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
    "pylint>=3.3.0",
]

[tool.uv]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
# N818: guardrail/send exceptions are named as spec events
# (GuardrailViolation, RealSendUnavailable), deliberately.
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# B008: `Depends(...)` in defaults is the canonical FastAPI idiom.
"src/relay/api/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["relay"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.12"
jobs = 0

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:relay.*"]
markers = [
    "exit_gate: Phase 0 exit-gate acceptance tests (roadmap Phase 0)",
]
